<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory Manager</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">Add an Item</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Text hint for suppier field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier">Supplier</string>

    <!-- Text hint for item field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_price">Price</string>

    <!-- Text hint for Quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_quantity">Quantity</string>

    <!-- Text hint for phone field in the editor [CHAR LIMIT=30] -->
    <string name="hint_phone_number">Phone Number</string>
    <string name="empty_view_title_text">Its a bit empty here</string>
    <string name="empty_view_subtitle_title">Start by Adding an Item</string>
    <string name="deletion_toast">Item Deleted</string>
    <string name="deletion_error_toast">Error in deleting item</string>
    <string name="delete_confirm_toast">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit_confirm_message">Discard changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="items_deleted">All Items deleted</string>
    <string name="delete_items_error">Error deleting items</string>
    <string name="sale">SALE</string>
    <string name="items_remaining">Item remaining:</string>
    <string name="rs">\u20B9</string>
    <string name="change_increment">Set increment/decrement value</string>
    <string name="OK">OK</string>
    <string name="name_label">Product Name*:</string>
    <string name="price_label">Price*:</string>
    <string name="quantity_label">Quantity:*</string>
    <string name="supplier_label">Supplier:</string>
    <string name="supplier_phone_label">Supplier Phone:</string>
    <string name="order">ORDER</string>
</resources>
