<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <!--Name Category-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--Label-->
        <TextView
            style="@style/CategoryStyle"
            android:text="Product Name:" />

        <!--Name Field-->
        <EditText
            android:id="@+id/edit_item_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_item_name"
            android:inputType="textCapWords" />
    </LinearLayout>

    <!--Price Category-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--Label-->
        <TextView
            style="@style/CategoryStyle"
            android:text="Price:" />

        <!-- Price field -->
        <EditText
            android:id="@+id/edit_item_price"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_price"
            android:inputType="textCapWords" />
    </LinearLayout>

    <!--Quantity Field-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--Label-->
        <TextView
            style="@style/CategoryStyle"
            android:text="Quantity:" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:orientation="horizontal">
            <!--Decrement-->
            <ImageButton
                android:id="@+id/decrement"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:src="@drawable/ic_action_minus" />

            <!--Quantity Field-->
            <TextView
                android:id="@+id/edit_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="5dp"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                android:textAppearance="?android:textAppearanceMedium" />

            <!--Increment-->
            <ImageButton
                android:id="@+id/increment"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_plus" />
        </LinearLayout>
    </LinearLayout>

    <!--Supplier Field-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--Label-->
        <TextView
            style="@style/CategoryStyle"
            android:text="Supplier:" />

        <!--Supplier Field-->
        <EditText
            android:id="@+id/edit_item_supplier"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_supplier"
            android:inputType="textCapWords" />
    </LinearLayout>

    <!--SupplierPhone Field-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--Label-->
        <TextView
            style="@style/CategoryStyle"
            android:text="Supplier Phone:" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">
            <!--SupplierPhone Field-->
            <EditText
                android:id="@+id/edit_supplier_phone"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:hint="@string/hint_phone_number"
                android:inputType="phone" />

            <Button
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="ORDER"
                android:textAllCaps="true" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
